; ModuleID = '/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_gzip_filter_module.c_ngx_http_gzip_hash.c'
source_filename = "/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_gzip_filter_module.c_ngx_http_gzip_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_CONF_OK = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [52 x i8] c"must be 512, 1k, 2k, 4k, 8k, 16k, 32k, 64k, or 128k\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @ngx_http_gzip_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_gzip_hash(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to i64*
  store i64* %12, i64** %8, align 8
  store i64 9, i64* %9, align 8
  store i64 131072, i64* %10, align 8
  br label %13

13:                                               ; preds = %28, %3
  %14 = load i64, i64* %10, align 8
  %15 = icmp ugt i64 %14, 256
  br i1 %15, label %16, label %31

16:                                               ; preds = %13
  %17 = load i64, i64* %10, align 8
  %18 = load i64*, i64** %8, align 8
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %17, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i64, i64* %9, align 8
  %23 = load i64*, i64** %8, align 8
  store i64 %22, i64* %23, align 8
  %24 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %24, i8** %4, align 8
  br label %32

25:                                               ; preds = %16
  %26 = load i64, i64* %9, align 8
  %27 = add i64 %26, -1
  store i64 %27, i64* %9, align 8
  br label %28

28:                                               ; preds = %25
  %29 = load i64, i64* %10, align 8
  %30 = lshr i64 %29, 1
  store i64 %30, i64* %10, align 8
  br label %13

31:                                               ; preds = %13
  store i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  br label %32

32:                                               ; preds = %31, %21
  %33 = load i8*, i8** %4, align 8
  ret i8* %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
